--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "@types/styled-components": "^5.1.32",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "styled-components": "^6.1.1"
+        "styled-components": "^6.1.1",
+        "vite-plugin-svgr": "^4.2.0"
     },
     "devDependencies": {
         "@testing-library/react": "^14.1.2",
