--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^18.2.0",
         "react-redux": "^9.0.4",
         "styled-components": "^6.1.1",
+        "swiper": "^11.0.5",
         "vite-plugin-svgr": "^4.2.0"
     },
     "devDependencies": {
