--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://Mariia22.github.io/E-commerce-product-page/",
     "name": "my-app",
     "private": true,
     "version": "0.0.0",
@@ -11,7 +12,9 @@
         "preview": "vite preview",
         "precommit": "npm run lint && npm run format",
         "test": "jest",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.0.1",
@@ -36,6 +39,7 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.4",
+        "gh-pages": "^6.1.0",
         "husky": "^8.0.3",
         "jest": "^29.7.0",
         "prettier": "3.1.0",
