deploy: add deploy commands

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://Mariia22.github.io/E-commerce-product-page/",
+    "homepage": "https://mariia22.github.io/E-commerce-product-page/",
     "name": "my-app",
     "private": true,
     "version": "0.0.0",
